[tool.poetry]
name = "e-nowshop-payment"
version = "0.1.2"
description = ""
authors = ["gustavodanielsw <gustavodanieldetoledo@gmail.com>"]

packages = [{ include = "enowshop_payment" }]


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
